css/main.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-image: url(/photo/background-image/IMG_20200808_122045_1~2.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    overflow: scroll;
}

.header {
    height: 10vh;
    background-color: rgba(0,0,0,0.3);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.container {
    display: flex;
    width: 50vw;
    justify-content: space-between;
    align-items: center;
    position: absolute;
    right: 85px;
    max-height: 10vh;
}

.nav a{
    position: relative;
    color: white;
    right: 10px;
    font-size: 20px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    text-decoration: none;
    display: flex;
    max-height: 10vh;
    padding: 25px 30px;
    align-items: center;
}

.nav a:hover {
    background-color: #e25808bd;
    transition: 0.3s ease; 
}


main {
    min-height: 85vh;
    width: 100vw;
}

footer {
    bottom: 0;
    height: 5vh;
    width: 100vw;
    background-color: #2a2e6d;
    opacity: 0.6;
    display: flex;
    align-items: center;
}

.title {
    position: absolute;
    height: 10vh;
    width: 100vw;
    top: 300px;    
}
    

.title h1{
    font-size: 60px;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: white;
    display: flex;
    justify-content: center;
    text-align: center;
}

.title pre {
    font-size: 20px;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    display: flex;
    justify-content: center;
}

footer p {
    color: white;
    font-size: 1em;
    margin-left: 10px;
}

.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 8px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
  }
  
  .active, .accordion:hover {
    background-color: #ccc;
  }
  
  .accordion:after {
    content: '\002B';
    color: #777;
    font-weight: bold;
    float: right;
    margin-left: 5px;
  }
  
  .active:after {
    content: "\2212";
  }
  
  .photo {
    background-color: transparent;
    max-height: 0;
    overflow: hidden;
    transition: 0.2s ease-out;
    margin: auto;
  }

  .image {
    display: block;
    margin: 0 auto;
    height: auto; 
    width: auto; 
    max-width: 500px; 
    max-height: 400px;
  }

  .container_1 {
      display: flex;
      justify-content: center;
      padding-top: 5vh;
  }

